[package]
name = "ez-jsonrpc"
version = "0.1.0"
description = "JSON-RPC 2.0 made easy!"

edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
ez-jsonrpc-types = { path = "types", version = "0.1.0" }

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ez-jsonrpc"
repository = "https://github.com/aatifsyed/ez-jsonrpc"
homepage = "https://crates.io/crates/ez-jsonrpc"
description = "JSON-RPC 2.0 made easy!"

[workspace]
members = ["types"]
