[package]
name = "ez-jsonrpc"
version = "0.1.0"

description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ez-jsonrpc-types = { path = "types", version = "0.2.0" }
ryu = "1.0.18"
serde = "1.0.205"
serde_json = "1.0.122"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ez-jsonrpc"
repository = "https://github.com/aatifsyed/ez-jsonrpc"
homepage = "https://crates.io/crates/ez-jsonrpc"
description = "JSON-RPC 2.0 made easy!"

[workspace]
members = ["types"]
