[package]
name = "ez-jsonrpc-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json = "1.0.119"
serde = { version = "1.0.197", features = ["derive"] }
indexmap = { version = "2.2.6", features = ["serde"], optional = true }
ryu = "1.0.18"

[features]
preserve_order = ["dep:indexmap"]
