[package]
name = "ez-jsonrpc-types"
version = "0.3.0"
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json = "1.0.119"
serde = { version = "1.0.197", features = ["derive"] }
indexmap = { version = "2.2.6", features = ["serde"], optional = true }

[features]
preserve_order = ["dep:indexmap"]
